[gd_scene load_steps=2 format=3 uid="uid://kb27rxm082xw"]

[ext_resource type="Script" path="res://Assets/Scripts/Menu.gd" id="1_hulx2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hulx2")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_right = 525.0
offset_bottom = 800.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Play" type="Button" parent="MainMenu/CenterContainer/MainContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Options")
text = "PLAY"

[node name="Resume" type="Button" parent="MainMenu/CenterContainer/MainContainer"]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("../Give_Up")
text = "RESUME"

[node name="Give_Up" type="Button" parent="MainMenu/CenterContainer/MainContainer"]
visible = false
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Options")
text = "GIVE UP"

[node name="Options" type="Button" parent="MainMenu/CenterContainer/MainContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
text = "STUFF"

[node name="Quit" type="Button" parent="MainMenu/CenterContainer/MainContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
text = "QUIT"

[node name="OptionsMenu" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1000, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 400)

[node name="CenterContainer" type="CenterContainer" parent="OptionsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="OptionsMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="OptionsMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BACK
"

[node name="Apply" type="Button" parent="OptionsMenu/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "HUE"

[connection signal="pressed" from="MainMenu/CenterContainer/MainContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/MainContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/MainContainer/Give_Up" to="." method="_on_give_up_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/MainContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/MainContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionsMenu/CenterContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="OptionsMenu/CenterContainer/VBoxContainer/HBoxContainer/Apply" to="." method="_on_apply_pressed"]
